--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -6,9 +6,16 @@
     </head>
     <body>
         {% for restaurant in restaurants %}
-            <a href="#">
+            <a href="{% url 'restaurant-detail' restaurant.id %}">
                 <ul>
-                    <li></li>
+                  <li>
+                    {{restaurant.name}}
+                  </li>
+                  <li>
+                    <p>
+                      {{restaurant.description}}
+                    </p>
+                  </li>
                 </ul>
             </a>
         {% endfor %}
