--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -5,6 +5,10 @@
         <title>Detail</title>
     </head>
     <body>
-        
+        <h1>{{restaurant.name}}</h1>
+        <p>{{restaurant.description}}</p>
+        <h2>{{restaurant.opening_time}}</h2>
+        <h2>{{restaurant.closing_time}}</h2>
+
     </body>
 </html>
