--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Index page</title>
     </head>
     <body>
         {{msg}}
